# talktomeclaude

./: .gitignore  AGENTS.md  LICENSE  README.md  llms.txt  pyproject.toml
.claude-plugin/: plugin.json
.github/workflows/: cross-platform.yml
docs/: DEPLOYMENT.md  WINDOWS_COMPANION.md  index.html
hooks/: hooks.json  stop-hook.sh
skills/voice-conveyance/: SKILL.md  chunking.md  duplex.md  feedback-verbs.md  scratchpad.md  tiers.md
src/talktomeclaude/: __init__.py  advisor.py  catalog.py  cli.py  clone.py  clone_ui.py  command_catalog.py  config.py  conveyance.py  diagnostics.py  f5.py  hook.py  (+11 more)
tests/: synthesis_subprocess_fixture.py  test_advisor.py  test_assistant_adapter.py  test_bargein.py  test_capture_delivery_integration.py  test_capture_service.py  test_cli_compat.py  test_cli_hook_manager.py  test_cli_voices.py  test_clone.py  test_clone_stt.py  test_clone_ui.py  test_command_catalog.py  test_companion_app.py  test_companion_audio.py  test_companion_headless.py  test_companion_hotkey.py  test_companion_inbox.py  test_companion_integration.py  test_companion_runtime.py  test_companion_settings.py  test_companion_speech.py  test_companion_tk_settings.py  test_companion_tk_shell.py  test_config_characterization.py  test_config_settings.py  test_config_store.py  test_conveyance.py  test_core_backoff.py  test_core_deadlines.py  test_core_runtime.py  test_core_state.py  test_core_workers.py  test_diagnostics.py  test_f5.py  test_hook_characterization.py  test_hook_transport.py  test_intent.py  test_listen_characterization.py  test_on_session_callback.py  (+25 more)
(+70 files in other folders)
